--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="main-course">
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\braised-meat.jpg" alt="Braised Meet">
+                                <img src="assets\img\food\braised-meat.jpg" alt="Braised Meat">
                             </div>
                             <div class="detail-box">
                                 <h5>Braised Meat</h5>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\minty-meat-rolls.jpg" alt="Minty Meat Rolls">
+                                <img src="assets\img\food\minty-meat-rolls.jpg" alt="Minty Meat Rolls">
                             </div>
                             <div class="detail-box">
                                 <h5>Minty Meat Rolls</h5>
@@ -124,7 +124,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\Qingce-Stir-Fry.webp" alt="Qingce Stir Fry">
+                                <img src="assets\img\food\Qingce-Stir-Fry.webp" alt="Qingce Stir Fry">
                             </div>
                             <div class="detail-box">
                                 <h5>Qingce Stir Fry</h5>
@@ -147,7 +147,7 @@
                     <div class="snack">
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\fish-and-chips.jpg" alt="Fish and Chips">
+                                <img src="assets\img\food\fish-and-chips.jpg" alt="Fish and Chips">
                             </div>
                             <div class="detail-box">
                                 <h5>Fish and Chips</h5>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\crystal-shrimp-dumpling2.jpg" alt="Crystal Shrimp Dumpling">
+                                <img src="assets\img\food\crystal-shrimp-dumpling2.jpg" alt="Crystal Shrimp Dumpling">
                             </div>
                             <div class="detail-box">
                                 <h5>Crystal Shrimp Dumpling</h5>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\samosa.jpg" alt="Samosa">
+                                <img src="assets\img\food\samosa.jpg" alt="Samosa">
                             </div>
                             <div class="detail-box">
                                 <h5>Samosa</h5>
@@ -210,7 +210,7 @@
                     <div class="dessert">
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\Lighter-than-air Pancake.jpg" alt="Lighter-than-air Pancake">
+                                <img src="assets\img\food\Lighter-than-air Pancake.jpg" alt="Lighter-than-air Pancake">
                             </div>
                             <div class="detail-box">
                                 <h5>Lighter-than-air Pancake</h5>
@@ -229,7 +229,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\Cloud-Shrouded Jade.webp" alt="Cloud-Shrouded Jade">
+                                <img src="assets\img\food\Cloud-Shrouded Jade.webp" alt="Cloud-Shrouded Jade">
                             </div>
                             <div class="detail-box">
                                 <h5>Cloud-Shrouded Jade</h5>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="box">
                             <div class="img-box">
-                                <img src="assets\img\padisarah-pudding.jpeg" alt="Padisarah Pudding">
+                                <img src="assets\img\food\padisarah-pudding.jpeg" alt="Padisarah Pudding">
                             </div>
                             <div class="detail-box">
                                 <h5>Padisarah Pudding</h5>
