client and server

--- a/server/index.html
+++ b/server/index.html
@@ -171,7 +171,7 @@
                             <div class="detail-box">
                                 <h5>Crystal Shrimp Dumpling</h5>
                                 <p>
-                                    Pangsit dengan isian terasi udang
+                                    Pangsit dengan isian udang
                                 </p>
                                 <div class="d-flex justify-content-between price_box">
                                     <div class="price_heading">
@@ -302,7 +302,7 @@
                             <div class="detail-box">
                                 <h5>Caramel Macchiato</h5>
                                 <p>
-                                    Coffee dengan saus karamel dan extra whipped cream
+                                    Kopi dengan saus karamel dan extra whipped cream
                                 </p>
                                 <div class="d-flex justify-content-between price_box">
                                     <div class="price_heading">
